--- a/index.html
+++ b/index.html
@@ -3,206 +3,194 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/index.css" />
     <title>Sarafan</title>
   </head>
   <body>
-    <div class="container">
-      <div class="mobile-title">
-        <h2 class="collection__title">New Collection</h2>
-        <p class="button-all-collection">
-          Все
+    <section class="new-collection container">
+      <div class="new-collection__title-block">
+        <div class="mobile-title">
+          <h2 class="new-collection-title">New collection</h2>
+          <p class="mobile-button">
+            Все
+            <svg
+              width="4"
+              height="7"
+              viewBox="0 0 4 7"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M0.643949 6.68725L3.55882 3.69701C3.61002 3.64448 3.63867 3.57404 3.63867 3.50069C3.63867 3.42735 3.61002 3.3569 3.55882 3.30438L0.643949 0.313007C0.620101 0.288514 0.591589 0.269046 0.560094 0.255754C0.528599 0.242461 0.49476 0.235613 0.460575 0.235613C0.426389 0.235613 0.39255 0.242461 0.361055 0.255754C0.32956 0.269046 0.301047 0.288514 0.2772 0.313007C0.228137 0.363237 0.20067 0.430666 0.20067 0.500882C0.20067 0.571097 0.228137 0.638526 0.2772 0.688756L3.01826 3.50069L0.2772 6.31207C0.228305 6.36227 0.200944 6.42958 0.200944 6.49966C0.200944 6.56974 0.228305 6.63705 0.2772 6.68725C0.301047 6.71175 0.32956 6.73121 0.361055 6.74451C0.39255 6.7578 0.426389 6.76465 0.460575 6.76465C0.49476 6.76465 0.528599 6.7578 0.560094 6.74451C0.591589 6.73121 0.620101 6.71175 0.643949 6.68725Z"
+                fill="#2D2D2D"
+              />
+            </svg>
+          </p>
+        </div>
+      </div>
+
+      <div class="new-collection__cards">
+        <div class="new-collection__card">
+          <img
+            class="new-collection__photo"
+            src="./images/new-collection/1.png"
+            alt="Наряд №1"
+          />
           <svg
-            class="arrow"
-            width="9"
-            height="9"
-            viewBox="0 0 4 7"
-            fill=""
+            class="button-like"
+            width="512"
+            height="512"
+            viewBox="0 0 512 512"
+            fill="none"
             xmlns="http://www.w3.org/2000/svg"
           >
             <path
-              d="M0.643949 6.68725L3.55882 3.69701C3.61002 3.64448 3.63867 3.57404 3.63867 3.50069C3.63867 3.42735 3.61002 3.3569 3.55882 3.30438L0.643949 0.313007C0.620101 0.288514 0.591589 0.269046 0.560094 0.255754C0.528599 0.242461 0.49476 0.235613 0.460575 0.235613C0.426389 0.235613 0.39255 0.242461 0.361055 0.255754C0.32956 0.269046 0.301047 0.288514 0.2772 0.313007C0.228137 0.363237 0.20067 0.430666 0.20067 0.500882C0.20067 0.571097 0.228137 0.638526 0.2772 0.688756L3.01826 3.50069L0.2772 6.31207C0.228305 6.36227 0.200944 6.42958 0.200944 6.49966C0.200944 6.56974 0.228305 6.63705 0.2772 6.68725C0.301047 6.71175 0.32956 6.73121 0.361055 6.74451C0.39255 6.7578 0.426389 6.76465 0.460575 6.76465C0.49476 6.76465 0.528599 6.7578 0.560094 6.74451C0.591589 6.73121 0.620101 6.71175 0.643949 6.68725Z"
-              fill="currentColor"
+              d="M83.9411 142.294C122.891 63.1439 255.67 91.5061 255.67 142.294H256.33C256.33 91.5061 389.109 63.1439 428.059 142.294C484.667 257.326 342.294 357.51 257.204 417.385L256.33 418H255.67L254.795 417.385C169.706 357.51 27.3328 257.326 83.9411 142.294Z"
+              stroke="currentcolor"
+              stroke-width="24"
             />
           </svg>
-        </p>
-      </div>
-      <div class="collection__products">
-        <div class="product-card">
-          <div class="product-card__image-wrapper">
-            <img
-              class="product-card__image"
-              src="./images/new-collection/1.png"
-              alt="Платье в полоску с запахом"
-            />
-            <button class="product-card__like">
-              <svg
-                class="product-card__like-icon"
-                width="26"
-                height="26"
-                viewBox="0 0 512 512"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-                aria-hidden="true"
-              >
-                <path
-                  d="M83.9411 142.294C122.891 63.1439 255.67 91.5061 255.67 142.294H256.33C256.33 91.5061 389.109 63.1439 428.059 142.294C484.667 257.326 342.294 357.51 257.204 417.385L256.33 418H255.67L254.795 417.385C169.706 357.51 27.3328 257.326 83.9411 142.294Z"
-                  stroke="currentColor"
-                  stroke-width="24"
-                />
-              </svg>
-            </button>
+          <div class="new-collection__card-text">
+            <div class="new-collection__card-name">
+              Платье в полоску с запахом
+            </div>
+            <div class="new-collection__card-price">6 999 руб.</div>
           </div>
-          <h3 class="product-card__name">Платье в полоску с запахом</h3>
-          <h3 class="product-card__price">6 999 руб.</h3>
         </div>
-
-        <div class="product-card">
-          <div class="product-card__image-wrapper">
-            <img
-              class="product-card__image"
-              src="./images/new-collection/2.png"
-              alt="Объемный пиджак"
+        <div class="new-collection__card">
+          <img
+            class="new-collection__photo"
+            src="./images/new-collection/2.png"
+            alt="Наряд №1"
+          />
+          <svg
+            class="button-like"
+            width="512"
+            height="512"
+            viewBox="0 0 512 512"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M83.9411 142.294C122.891 63.1439 255.67 91.5061 255.67 142.294H256.33C256.33 91.5061 389.109 63.1439 428.059 142.294C484.667 257.326 342.294 357.51 257.204 417.385L256.33 418H255.67L254.795 417.385C169.706 357.51 27.3328 257.326 83.9411 142.294Z"
+              stroke="currentcolor"
+              stroke-width="24"
             />
-            <button class="product-card__like">
-              <svg
-                class="product-card__like-icon"
-                width="26"
-                height="26"
-                viewBox="0 0 512 512"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-                aria-hidden="true"
-              >
-                <path
-                  d="M83.9411 142.294C122.891 63.1439 255.67 91.5061 255.67 142.294H256.33C256.33 91.5061 389.109 63.1439 428.059 142.294C484.667 257.326 342.294 357.51 257.204 417.385L256.33 418H255.67L254.795 417.385C169.706 357.51 27.3328 257.326 83.9411 142.294Z"
-                  stroke="currentColor"
-                  stroke-width="24"
-                />
-              </svg>
-            </button>
+          </svg>
+          <div class="new-collection__card-text">
+            <div class="new-collection__card-name">Объемный пиджак</div>
+            <div class="new-collection__card-price">12 999 руб.</div>
           </div>
-          <h3 class="product-card__name">Объемный пиджак</h3>
-          <h3 class="product-card__price">12 999 руб.</h3>
         </div>
-
-        <div class="product-card">
-          <div class="product-card__image-wrapper">
-            <img
-              class="product-card__image"
-              src="./images/new-collection/3.png"
-              alt="Комбинизон с принтом"
+        <div class="new-collection__card">
+          <img
+            class="new-collection__photo"
+            src="./images/new-collection/3.png"
+            alt="Наряд №1"
+          />
+          <svg
+            class="button-like"
+            width="512"
+            height="512"
+            viewBox="0 0 512 512"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M83.9411 142.294C122.891 63.1439 255.67 91.5061 255.67 142.294H256.33C256.33 91.5061 389.109 63.1439 428.059 142.294C484.667 257.326 342.294 357.51 257.204 417.385L256.33 418H255.67L254.795 417.385C169.706 357.51 27.3328 257.326 83.9411 142.294Z"
+              stroke="currentcolor"
+              stroke-width="24"
             />
-            <button class="product-card__like">
-              <svg
-                class="product-card__like-icon"
-                width="26"
-                height="26"
-                viewBox="0 0 512 512"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-                aria-hidden="true"
-              >
-                <path
-                  d="M83.9411 142.294C122.891 63.1439 255.67 91.5061 255.67 142.294H256.33C256.33 91.5061 389.109 63.1439 428.059 142.294C484.667 257.326 342.294 357.51 257.204 417.385L256.33 418H255.67L254.795 417.385C169.706 357.51 27.3328 257.326 83.9411 142.294Z"
-                  stroke="currentColor"
-                  stroke-width="24"
-                />
-              </svg>
-            </button>
+          </svg>
+          <div class="new-collection__card-text">
+            <div class="new-collection__card-name">Комбинезон с принтом</div>
+            <div class="new-collection__card-price">6 999 руб.</div>
           </div>
-          <h3 class="product-card__name">Комбинизон с принтом</h3>
-          <h3 class="product-card__price">6 999 руб.</h3>
         </div>
-
-        <div class="product-card">
-          <div class="product-card__image-wrapper">
-            <img
-              class="product-card__image"
-              src="./images/new-collection/4.png"
-              alt="Атласный топ-комбинация"
+        <div class="new-collection__card">
+          <img
+            class="new-collection__photo"
+            src="./images/new-collection/4.png"
+            alt="Наряд №1"
+          />
+          <svg
+            class="button-like"
+            width="512"
+            height="512"
+            viewBox="0 0 512 512"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M83.9411 142.294C122.891 63.1439 255.67 91.5061 255.67 142.294H256.33C256.33 91.5061 389.109 63.1439 428.059 142.294C484.667 257.326 342.294 357.51 257.204 417.385L256.33 418H255.67L254.795 417.385C169.706 357.51 27.3328 257.326 83.9411 142.294Z"
+              stroke="currentcolor"
+              stroke-width="24"
             />
-            <button class="product-card__like">
-              <svg
-                class="product-card__like-icon"
-                width="26"
-                height="26"
-                viewBox="0 0 512 512"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-                aria-hidden="true"
-              >
-                <path
-                  d="M83.9411 142.294C122.891 63.1439 255.67 91.5061 255.67 142.294H256.33C256.33 91.5061 389.109 63.1439 428.059 142.294C484.667 257.326 342.294 357.51 257.204 417.385L256.33 418H255.67L254.795 417.385C169.706 357.51 27.3328 257.326 83.9411 142.294Z"
-                  stroke="currentColor"
-                  stroke-width="24"
-                />
-              </svg>
-            </button>
+          </svg>
+          <div class="new-collection__card-text">
+            <div class="new-collection__card-name">Атласный топ-комбинация</div>
+            <div class="new-collection__card-price">2 799 руб.</div>
           </div>
-          <h3 class="product-card__name">Атласный топ-комбинация</h3>
-          <h3 class="product-card__price">2 799 руб.</h3>
         </div>
       </div>
-      <div class="collection__products-big">
-        <div class="product-card--big">
-          <div class="product-card__image-wrapper">
-            <img
-              class="product-card__image product-card__image--big"
-              src="./images/new-collection/5.png"
-              alt="Блейзер с декоративными пуговицами (черный)"
+      <div class="new-collection__cards-big">
+        <div class="new-collection__card-big">
+          <img
+            class="new-collection__photo-big"
+            src="./images/new-collection/5.png"
+            alt=""
+          />
+          <svg
+            class="button-like"
+            width="512"
+            height="512"
+            viewBox="0 0 512 512"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M83.9411 142.294C122.891 63.1439 255.67 91.5061 255.67 142.294H256.33C256.33 91.5061 389.109 63.1439 428.059 142.294C484.667 257.326 342.294 357.51 257.204 417.385L256.33 418H255.67L254.795 417.385C169.706 357.51 27.3328 257.326 83.9411 142.294Z"
+              stroke="currentcolor"
+              stroke-width="24"
             />
-            <button class="product-card__like">
-              <svg
-                class="product-card__like-icon"
-                width="26"
-                height="26"
-                viewBox="0 0 512 512"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-                aria-hidden="true"
-              >
-                <path
-                  d="M83.9411 142.294C122.891 63.1439 255.67 91.5061 255.67 142.294H256.33C256.33 91.5061 389.109 63.1439 428.059 142.294C484.667 257.326 342.294 357.51 257.204 417.385L256.33 418H255.67L254.795 417.385C169.706 357.51 27.3328 257.326 83.9411 142.294Z"
-                  stroke="currentColor"
-                  stroke-width="24"
-                />
-              </svg>
-            </button>
+          </svg>
+          <div class="new-collection__card-text">
+            <div class="new-collection__card-name">Комбинезон с принтом</div>
+            <div class="new-collection__card-price">6 999 руб.</div>
           </div>
-          <h3 class="product-card__name">Блейзер с декоративными пуговицами</h3>
-          <h3 class="product-card__price">9 999 руб.</h3>
         </div>
-
-        <div class="product-card--big">
-          <div class="product-card__image-wrapper">
-            <img
-              class="product-card__image product-card__image--big"
-              src="./images/new-collection/6.png"
-              alt="Блейзер с декоративными пуговицами (бежевый)"
+        <div class="new-collection__card-big">
+          <img
+            class="new-collection__photo-big"
+            src="./images/new-collection/6.png"
+            alt=""
+          />
+          <svg
+            class="button-like"
+            width="512"
+            height="512"
+            viewBox="0 0 512 512"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M83.9411 142.294C122.891 63.1439 255.67 91.5061 255.67 142.294H256.33C256.33 91.5061 389.109 63.1439 428.059 142.294C484.667 257.326 342.294 357.51 257.204 417.385L256.33 418H255.67L254.795 417.385C169.706 357.51 27.3328 257.326 83.9411 142.294Z"
+              stroke="currentcolor"
+              stroke-width="24"
             />
-            <button class="product-card__like">
-              <svg
-                class="product-card__like-icon"
-                width="26"
-                height="26"
-                viewBox="0 0 512 512"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-                aria-hidden="true"
-              >
-                <path
-                  d="M83.9411 142.294C122.891 63.1439 255.67 91.5061 255.67 142.294H256.33C256.33 91.5061 389.109 63.1439 428.059 142.294C484.667 257.326 342.294 357.51 257.204 417.385L256.33 418H255.67L254.795 417.385C169.706 357.51 27.3328 257.326 83.9411 142.294Z"
-                  stroke="currentColor"
-                  stroke-width="24"
-                />
-              </svg>
-            </button>
+          </svg>
+          <div class="new-collection__card-text">
+            <div class="new-collection__card-name">Комбинезон с принтом</div>
+            <div class="new-collection__card-price">6 999 руб.</div>
           </div>
-          <h3 class="product-card__name">Блейзер с декоративными пуговицами</h3>
-          <h3 class="product-card__price">9 999 руб.</h3>
         </div>
       </div>
-    </div>
+    </section>
   </body>
 </html>
