--- a/index.html
+++ b/index.html
@@ -14,40 +14,44 @@
     <title>Sarafan</title>
   </head>
   <body>
-    <div class="container autumn">
-      <div class="title-about">
-        <h2 class="title">Вдохновленные весной</h2>
+    <section>
+      <div class="container">
         <div class="about">
-          <p class="text-about">
+          <h2 class="title__collection">Вдохновленные весной</h2>
+          <div class="about__collection">
+            <p class="collection-text">
+              Разнообразный и богатый опыт рамки и место обучения кадров
+              способствует подготовки и реализации форм развития. С другой
+              стороны реализация намеченных плановых
+            </p>
+            <a href="/" class="bottom-about">О бренде</a>
+          </div>
+        </div>
+        <div class="photo__collection">
+          <img class="left-photo" src="./autumn-images/1.png" alt="" />
+          <img class="right-photo" src="./autumn-images/2.png" alt="" />
+        </div>
+      </div>
+      <div class="for__mobile">
+        <div class="mobile__title-block">
+          <h2 class="mobile__title">Вдохновленные весной</h2>
+        </div>
+        <div class="mobile__photo">
+          <img
+            class="img-mobile"
+            src="./autumn-images/mobile/mobile1.png"
+            alt=""
+          />
+        </div>
+        <div class="about__collection">
+          <p class="collection-text">
             Разнообразный и богатый опыт рамки и место обучения кадров
             способствует подготовки и реализации форм развития. С другой стороны
             реализация намеченных плановых
           </p>
-          <p class="buttom-about">О бренде</p>
+          <a class="bottom-about" href="/">О бренде</a>
         </div>
       </div>
-      <div class="photo-collection">
-        <img class="left-photo" src="./images/image 1.png" alt="Фото на руке" />
-        <img
-          class="right-photo"
-          src="./images/Rectangle 4.png"
-          alt="Вся коллекция"
-        />
-      </div>
-    </div>
-    <div class="for-mobile">
-      <h2 class="title-mobile">Вдохновленные весной</h2>
-      <div class="photo">
-        <img class="mobile-photo" src="./images/image 1.png" alt="" />
-      </div>
-      <div class="mobile-about__text">
-        <p class="mobile-about__item">
-          Разнообразный и богатый опыт рамки и место обучения кадров
-          способствует подготовки и реализации форм развития. С другой стороны
-          реализация намеченных плановых
-        </p>
-        <p class="mobile-bottom-about">О бренде</p>
-      </div>
-    </div>
+    </section>
   </body>
 </html>
