--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <title>Sarafan</title>
   </head>
   <body>
-    <section>
-      <div class="container">
+    <section class="autumn">
+      <div class="autumn-collection container">
         <div class="about">
           <h2 class="title__collection">Вдохновленные весной</h2>
           <div class="about__collection">
@@ -32,6 +32,7 @@
           <img class="right-photo" src="./autumn-images/2.png" alt="" />
         </div>
       </div>
+
       <div class="for__mobile">
         <div class="mobile__title-block">
           <h2 class="mobile__title">Вдохновленные весной</h2>
