--- a/index.html
+++ b/index.html
@@ -6,5 +6,22 @@
     <link rel="stylesheet" href="./css/index.css" />
     <title>Sarafan</title>
   </head>
-  <body></body>
+  <body>
+    <section class="banner">
+      <div class="nav__banner container">
+        <div class="nav__store">
+          <a class="nav__store-item" href="">Новинка</a>
+          <a class="nav__store-item" href="">Одежда</a>
+          <a class="nav__store-item" href="">Аксессуары</a>
+          <a class="nav__store-item" href="">SALE</a>
+        </div>
+        <div class="nav__logo-collection">
+          <img src="./img-banner/logo.svg" alt="logo" />
+        </div>
+        <div class="nav__user-tools">
+          <input type="text" />
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
