--- a/index.html
+++ b/index.html
@@ -3,56 +3,66 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-
     <link rel="stylesheet" href="./css/index.css" />
     <title>Sarafan</title>
   </head>
   <body>
-    <section class="autumn">
-      <div class="autumn-collection container">
-        <div class="about">
-          <h2 class="title__collection">Вдохновленные весной</h2>
-          <div class="about__collection">
-            <p class="collection-text">
-              Разнообразный и богатый опыт рамки и место обучения кадров
-              способствует подготовки и реализации форм развития. С другой
-              стороны реализация намеченных плановых
-            </p>
-            <a href="/" class="bottom-about">О бренде</a>
-          </div>
-        </div>
-        <div class="photo__collection">
-          <img class="left-photo" src="./autumn-images/1.png" alt="" />
-          <img class="right-photo" src="./autumn-images/2.png" alt="" />
-        </div>
-      </div>
+    <!DOCTYPE html>
+    <html>
+      <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+          href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+          rel="stylesheet"
+        />
 
-      <div class="for__mobile">
-        <div class="mobile__title-block">
-          <h2 class="mobile__title">Вдохновленные весной</h2>
-        </div>
-        <div class="mobile__photo">
-          <img
-            class="img-mobile"
-            src="./autumn-images/mobile/mobile1.png"
-            alt=""
-          />
-        </div>
-        <div class="about__collection">
-          <p class="collection-text">
-            Разнообразный и богатый опыт рамки и место обучения кадров
-            способствует подготовки и реализации форм развития. С другой стороны
-            реализация намеченных плановых
-          </p>
-          <a class="bottom-about" href="/">О бренде</a>
-        </div>
-      </div>
-    </section>
+        <link rel="stylesheet" href="./css/index.css" />
+        <title>Sarafan</title>
+      </head>
+      <body>
+        <section>
+          <div class="container">
+            <div class="about">
+              <h2 class="title__collection">Вдохновленные весной</h2>
+              <div class="about__collection">
+                <p class="collection-text">
+                  Разнообразный и богатый опыт рамки и место обучения кадров
+                  способствует подготовки и реализации форм развития. С другой
+                  стороны реализация намеченных плановых
+                </p>
+                <a href="/" class="bottom-about">О бренде</a>
+              </div>
+            </div>
+            <div class="photo__collection">
+              <img class="left-photo" src="./autumn-images/1.png" alt="" />
+              <img class="right-photo" src="./autumn-images/2.png" alt="" />
+            </div>
+          </div>
+          <div class="for__mobile">
+            <div class="mobile__title-block">
+              <h2 class="mobile__title">Вдохновленные весной</h2>
+            </div>
+            <div class="mobile__photo">
+              <img
+                class="img-mobile"
+                src="./autumn-images/mobile/mobile1.png"
+                alt=""
+              />
+            </div>
+            <div class="about__collection">
+              <p class="collection-text">
+                Разнообразный и богатый опыт рамки и место обучения кадров
+                способствует подготовки и реализации форм развития. С другой
+                стороны реализация намеченных плановых
+              </p>
+              <a class="bottom-about" href="/">О бренде</a>
+            </div>
+          </div>
+        </section>
+      </body>
+    </html>
   </body>
 </html>
