future-banner/not-ready

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <section class="banner">
       <div class="header__tools container">
         <nav class="nav__store">
+          <div class="burger__nav-button">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+          </div>
           <a class="nav__item" href="">Новинки</a>
           <a class="nav__item" href="">Одежда</a>
           <a class="nav__item" href="">Аксессуары</a>
@@ -28,7 +33,7 @@
         <div class="header__button-icons">
           <input class="input" type="text" placeholder="Поиск" />
           <svg
-            class="svg-button"
+            class="svg-button like"
             width="25"
             height="23"
             viewBox="0 0 25 23"
