--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
         </div>
       </div>
     </section>
-    <section>
-      <div class="container">
+    <section class="autumn container">
+      <div class="autumn__collection-pc">
         <div class="about">
           <h2 class="title__collection">Вдохновленные весной</h2>
           <div class="about__collection">
@@ -202,8 +202,20 @@
           </div>
         </div>
         <div class="photo__collection">
-          <img class="left-photo" src="./autumn-images/1.png" alt="" />
-          <img class="right-photo" src="./autumn-images/2.png" alt="" />
+          <div class="autumn__left-photo">
+            <img
+              class="left__photo-autumn-collection"
+              src="./autumn-images/1.png"
+              alt=""
+            />
+          </div>
+          <div class="autumn__right-photo">
+            <img
+              class="right__photo-autumn-collection"
+              src="./autumn-images/2.png"
+              alt=""
+            />
+          </div>
         </div>
       </div>
       <div class="for__mobile">
