--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
     </section>
     <section class="autumn container">
       <div class="autumn__collection-pc">
-        <div class="about">
-          <h2 class="title__collection">Вдохновленные весной</h2>
-          <div class="about__collection">
+        <div class="about__autumn">
+          <h2 class="title__collection-autumn">Вдохновленные весной</h2>
+          <div class="about__collection-autumn">
             <p class="collection-text">
               Разнообразный и богатый опыт рамки и место обучения кадров
               способствует подготовки и реализации форм развития. С другой
@@ -203,33 +203,25 @@
         </div>
         <div class="photo__collection">
           <div class="autumn__left-photo">
-            <img
-              class="left__photo-autumn-collection"
-              src="./autumn-images/1.png"
-              alt=""
-            />
+            <img src="./autumn-images/1.png" alt="" />
           </div>
           <div class="autumn__right-photo">
-            <img
-              class="right__photo-autumn-collection"
-              src="./autumn-images/2.png"
-              alt=""
-            />
+            <img src="./autumn-images/2.png" alt="" />
           </div>
         </div>
       </div>
-      <div class="for__mobile">
+      <div class="for__mobile-autumn">
         <div class="mobile__title-block">
-          <h2 class="mobile__title">Вдохновленные весной</h2>
+          <h2 class="mobile__title-autumn">Вдохновленные весной</h2>
         </div>
-        <div class="mobile__photo">
+        <div class="mobile__photo-autumn">
           <img
-            class="img-mobile"
+            class="img-mobile-autumn"
             src="./autumn-images/mobile/mobile1.png"
             alt=""
           />
         </div>
-        <div class="about__collection">
+        <div class="about__collection-mobile-autumn">
           <p class="collection-text">
             Разнообразный и богатый опыт рамки и место обучения кадров
             способствует подготовки и реализации форм развития. С другой стороны
