--- a/index.html
+++ b/index.html
@@ -64,6 +64,19 @@
         </div>
         <div class="banner__input">
           <input class="input" type="text" placeholder="Поиск" />
+          <svg
+            class="input__icon"
+            width="11"
+            height="11"
+            viewBox="0 0 11 11"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M5.74 10.68C3.004 10.68 0.8 8.47605 0.8 5.74005C0.8 3.00405 3.004 0.800049 5.74 0.800049C8.476 0.800049 10.68 3.00405 10.68 5.74005C10.68 8.47605 8.476 10.68 5.74 10.68ZM5.74 1.56005C3.422 1.56005 1.56 3.42205 1.56 5.74005C1.56 8.05805 3.422 9.92005 5.74 9.92005C8.058 9.92005 9.92 8.05805 9.92 5.74005C9.92 3.42205 8.058 1.56005 5.74 1.56005Z"
+              fill="#6F6F6F"
+            />
+          </svg>
         </div>
         <div class="banner__tools">
           <svg
@@ -108,6 +121,33 @@
         </div>
       </div>
       <div class="banner__content container">
+        <svg
+          class="left__arrow-slide"
+          width="24"
+          height="25"
+          viewBox="0 0 24 25"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M14.2828 3.61667L6.5098 11.7584C6.37328 11.9014 6.29688 12.0932 6.29688 12.2929C6.29688 12.4926 6.37328 12.6844 6.5098 12.8274L14.2828 20.9722C14.3464 21.0389 14.4224 21.0919 14.5064 21.1281C14.5904 21.1643 14.6806 21.1829 14.7718 21.1829C14.863 21.1829 14.9532 21.1643 15.0372 21.1281C15.1212 21.0919 15.1972 21.0389 15.2608 20.9722C15.3916 20.8354 15.4649 20.6518 15.4649 20.4606C15.4649 20.2695 15.3916 20.0859 15.2608 19.9491L7.9513 12.2929L15.2608 4.63821C15.3912 4.50152 15.4641 4.31825 15.4641 4.12744C15.4641 3.93663 15.3912 3.75336 15.2608 3.61667C15.1972 3.54998 15.1212 3.49698 15.0372 3.46078C14.9532 3.42459 14.863 3.40594 14.7718 3.40594C14.6806 3.40594 14.5904 3.42459 14.5064 3.46078C14.4224 3.49698 14.3464 3.54998 14.2828 3.61667Z"
+            fill="Currentcolor"
+          />
+        </svg>
+        <svg
+          class="right__arrow-slide"
+          width="24"
+          height="25"
+          viewBox="0 0 24 25"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M14.2828 3.61667L6.5098 11.7584C6.37328 11.9014 6.29688 12.0932 6.29688 12.2929C6.29688 12.4926 6.37328 12.6844 6.5098 12.8274L14.2828 20.9722C14.3464 21.0389 14.4224 21.0919 14.5064 21.1281C14.5904 21.1643 14.6806 21.1829 14.7718 21.1829C14.863 21.1829 14.9532 21.1643 15.0372 21.1281C15.1212 21.0919 15.1972 21.0389 15.2608 20.9722C15.3916 20.8354 15.4649 20.6518 15.4649 20.4606C15.4649 20.2695 15.3916 20.0859 15.2608 19.9491L7.9513 12.2929L15.2608 4.63821C15.3912 4.50152 15.4641 4.31825 15.4641 4.12744C15.4641 3.93663 15.3912 3.75336 15.2608 3.61667C15.1972 3.54998 15.1212 3.49698 15.0372 3.46078C14.9532 3.42459 14.863 3.40594 14.7718 3.40594C14.6806 3.40594 14.5904 3.42459 14.5064 3.46078C14.4224 3.49698 14.3464 3.54998 14.2828 3.61667Z"
+            fill="Currentcolor"
+          />
+        </svg>
+
         <div class="banner__about">
           <div class="banner__text">
             <div class="banner__title">
