--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </svg>
       </div>
       <div class="help">
-        <h3 class="title__block">Help</h3>
+        <h3 class="title__block">Помощь</h3>
         <a href="">Оплата</a>
         <a href="">Доставка</a>
         <a href="">Возврат и обмен</a>
@@ -73,6 +73,62 @@
         конфиденциальности<br />
         © 2022 sarafancollection.ru
       </p>
+    </div>
+    <div class="for__mobile-podval">
+      <div class="mobile__podval">
+        <div class="help__podval-mobile">
+          <h3>
+            Помощь<svg
+              class="arrow__podval-bottom"
+              width="4"
+              height="7"
+              viewBox="0 0 4 7"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M0.643949 6.68725L3.55882 3.69701C3.61002 3.64448 3.63867 3.57404 3.63867 3.50069C3.63867 3.42735 3.61002 3.3569 3.55882 3.30438L0.643949 0.313007C0.620101 0.288514 0.591589 0.269046 0.560094 0.255754C0.528599 0.242461 0.49476 0.235613 0.460575 0.235613C0.426389 0.235613 0.39255 0.242461 0.361055 0.255754C0.32956 0.269046 0.301047 0.288514 0.2772 0.313007C0.228137 0.363237 0.20067 0.430666 0.20067 0.500882C0.20067 0.571097 0.228137 0.638526 0.2772 0.688756L3.01826 3.50069L0.2772 6.31207C0.228305 6.36227 0.200944 6.42958 0.200944 6.49966C0.200944 6.56974 0.228305 6.63705 0.2772 6.68725C0.301047 6.71175 0.32956 6.73121 0.361055 6.74451C0.39255 6.7578 0.426389 6.76465 0.460575 6.76465C0.49476 6.76465 0.528599 6.7578 0.560094 6.74451C0.591589 6.73121 0.620101 6.71175 0.643949 6.68725Z"
+                fill="currentcolor"
+              />
+            </svg>
+          </h3>
+        </div>
+        <div class="Company__podval-mobile">
+          <h3>
+            Компания
+            <svg
+              class="arrow__podval-top"
+              width="4"
+              height="7"
+              viewBox="0 0 4 7"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M0.643949 6.68725L3.55882 3.69701C3.61002 3.64448 3.63867 3.57404 3.63867 3.50069C3.63867 3.42735 3.61002 3.3569 3.55882 3.30438L0.643949 0.313007C0.620101 0.288514 0.591589 0.269046 0.560094 0.255754C0.528599 0.242461 0.49476 0.235613 0.460575 0.235613C0.426389 0.235613 0.39255 0.242461 0.361055 0.255754C0.32956 0.269046 0.301047 0.288514 0.2772 0.313007C0.228137 0.363237 0.20067 0.430666 0.20067 0.500882C0.20067 0.571097 0.228137 0.638526 0.2772 0.688756L3.01826 3.50069L0.2772 6.31207C0.228305 6.36227 0.200944 6.42958 0.200944 6.49966C0.200944 6.56974 0.228305 6.63705 0.2772 6.68725C0.301047 6.71175 0.32956 6.73121 0.361055 6.74451C0.39255 6.7578 0.426389 6.76465 0.460575 6.76465C0.49476 6.76465 0.528599 6.7578 0.560094 6.74451C0.591589 6.73121 0.620101 6.71175 0.643949 6.68725Z"
+                fill="currentcolor"
+              />
+            </svg>
+          </h3>
+          <a href="">О нас</a>
+          <a href="">Наши магазины</a>
+          <a href="">Контакты</a>
+        </div>
+        <div class="media__podval-mobile">
+          <a href="">TikTok</a>
+          <a href="">VK</a>
+          <a href="">Telegram</a>
+        </div>
+        <div class="img__podval-logo">
+          <img src="../sarafan/svg-photo/podval-svg/SCWhite1 1.svg" alt="" />
+        </div>
+      </div>
+      <div class="podval__text-mobile">
+        <p>
+          Все права защищены.Пользовательское соглашение.Политика
+          конфиденциальности © 2022 sarafancollection.ru
+        </p>
+      </div>
     </div>
   </body>
 </html>
